--- a/SigebiWeb/src/main/resources/Tratamiento.jrxml
+++ b/SigebiWeb/src/main/resources/Tratamiento.jrxml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="tratamiento" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="76e734f9-454a-4484-a639-b127b8e14d8e">
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="Tratamiento" pageWidth="792" pageHeight="612" orientation="Landscape" columnWidth="752" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="e98c3338-99fa-40fd-a53f-4dde6a8ad4ef">
 	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="SIGEBI"/>
-	<parameter name="consultaid" class="java.lang.Integer"/>
+	<parameter name="consulta_id" class="java.lang.Integer"/>
 	<queryString language="SQL">
 		<![CDATA[select t.prescripcion_farm, i.descripcion,ti.cantidad
 from consultas c
@@ -15,7 +15,7 @@ t.tratamiento_id = ti.tratamiento_id
 join insumos i
 on
 ti.insumo_id=i.insumo_id
-where c.consulta_id=$P{consultaid}]]>
+where c.consulta_id=$P{consulta_id}]]>
 	</queryString>
 	<field name="prescripcion_farm" class="java.lang.String">
 		<property name="com.jaspersoft.studio.field.name" value="prescripcion_farm"/>
@@ -45,27 +45,23 @@ where c.consulta_id=$P{consultaid}]]>
 		<band splitType="Stretch"/>
 	</background>
 	<detail>
-		<band height="90" splitType="Stretch">
+		<band height="125" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="58" width="155" height="30" uuid="70de894d-17dc-4919-8f46-91ede29cc5d9"/>
+				<reportElement x="-1" y="0" width="100" height="30" uuid="13319ff0-f40a-44d0-9ab4-20f82ad0ddaa"/>
 				<textFieldExpression><![CDATA[$F{prescripcion_farm}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="0" y="40" width="100" height="18" uuid="9d317fdb-fcfa-4c23-baa9-249d83e56858"/>
-				<text><![CDATA[Tratamiento]]></text>
-			</staticText>
 			<textField>
-				<reportElement x="-1" y="0" width="100" height="30" uuid="aa223bc6-7c75-4e13-82b7-759904da05b5"/>
+				<reportElement x="0" y="80" width="100" height="30" uuid="953250b9-06c7-4e0c-8f31-a314b710a4a9"/>
+				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="100" y="0" width="100" height="30" uuid="631be93a-083a-49ce-b82f-aff53b7fc11e"/>
 				<textFieldExpression><![CDATA[$F{cantidad}]]></textFieldExpression>
 			</textField>
 			<staticText>
-				<reportElement x="-101" y="0" width="100" height="30" uuid="0a7b3ce8-6ee9-4791-83cf-85820358bd54"/>
-				<text><![CDATA[cantidad]]></text>
+				<reportElement x="0" y="64" width="100" height="16" uuid="9f8d3f78-5632-47b3-a500-ed2abdda0c57"/>
+				<text><![CDATA[Tratamiento]]></text>
 			</staticText>
-			<textField>
-				<reportElement x="98" y="-1" width="100" height="30" uuid="c4f16abb-c01e-4155-8f98-2b1d82deb146"/>
-				<textFieldExpression><![CDATA[$F{descripcion}]]></textFieldExpression>
-			</textField>
 		</band>
 	</detail>
 </jasperReport>
