--- a/SigebiWeb/src/main/resources/receta.jrxml
+++ b/SigebiWeb/src/main/resources/receta.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 6.16.0.final using JasperReports Library version 6.16.0-48579d909b7943b64690c65c71e07e0b80981928  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="receta" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="4eedbb89-b4f6-4469-9ab6-f642a1688cf7">
-	<property name="com.jaspersoft.studio.data.sql.tables" value="cGVyc29uYXMgLDE1LDE1LGMyMWFmNzZlLTE4ZmEtNDVmOS05ZDI0LTM0NTRlMjYxYjc5Yjs="/>
+	<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="SIGEBI"/>
 	<style name="Title" forecolor="#FFFFFF" fontName="Times New Roman" fontSize="50" isBold="false" pdfFontName="Times-Bold"/>
 	<style name="SubTitle" forecolor="#CCCCCC" fontName="Times New Roman" fontSize="18" isBold="false" pdfFontName="Times-Roman"/>
@@ -61,10 +61,9 @@
 	<parameter name="consultaid" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[$P{consultaid}]]></defaultValueExpression>
 	</parameter>
-	<parameter name="nombre_subreporte" class="java.lang.String"/>
 	<parameter name="consulta_id" class="java.lang.Integer"/>
 	<queryString language="SQL">
-		<![CDATA[select per.cedula,per.nombres, per.apellidos
+		<![CDATA[select per.cedula,per.nombres, per.apellidos,c.consulta_id
 from consultas c
 join pacientes p
 on  c.paciente_id=p.paciente_id
@@ -87,6 +86,7 @@ where c.consulta_id=$P{consultaid}]]>
 		<property name="com.jaspersoft.studio.field.label" value="apellidos"/>
 		<property name="com.jaspersoft.studio.field.tree.path" value="personas"/>
 	</field>
+	<field name="consulta_id" class="java.lang.Integer"/>
 	<group name="nombres">
 		<groupExpression><![CDATA[$F{nombres}]]></groupExpression>
 	</group>
@@ -95,6 +95,9 @@ where c.consulta_id=$P{consultaid}]]>
 	</group>
 	<group name="cedula">
 		<groupExpression><![CDATA[$F{cedula}]]></groupExpression>
+	</group>
+	<group name="consulta_id">
+		<groupExpression><![CDATA[$F{consulta_id}]]></groupExpression>
 	</group>
 	<title>
 		<band height="160" splitType="Stretch">
@@ -109,7 +112,7 @@ where c.consulta_id=$P{consultaid}]]>
 				<text><![CDATA[Paciente]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="0" y="115" width="120" height="15" uuid="33274f5d-5b7e-4be2-a2ff-65d452a618ed"/>
+				<reportElement x="0" y="115" width="84" height="15" uuid="33274f5d-5b7e-4be2-a2ff-65d452a618ed"/>
 				<textElement>
 					<font size="12"/>
 				</textElement>
@@ -171,7 +174,7 @@ where c.consulta_id=$P{consultaid}]]>
 				<text><![CDATA[Facultad Politécnica]]></text>
 			</staticText>
 			<textField isBlankWhenNull="true">
-				<reportElement positionType="Float" x="120" y="115" width="130" height="15" forecolor="#000000" uuid="7704da8a-15f5-49a1-9c4c-5fa682bd4652"/>
+				<reportElement positionType="Float" x="84" y="115" width="130" height="15" forecolor="#000000" uuid="7704da8a-15f5-49a1-9c4c-5fa682bd4652"/>
 				<textElement>
 					<font fontName="SansSerif" size="12" isBold="false" isItalic="true"/>
 				</textElement>
@@ -208,15 +211,12 @@ where c.consulta_id=$P{consultaid}]]>
 				<text><![CDATA[Rp.) ]]></text>
 			</staticText>
 			<subreport>
-				<reportElement x="0" y="50" width="556" height="200" uuid="c341290a-b6ef-4d5c-a998-8fa9e22ff335"/>
-				<subreportParameter name="consulta_id">
-					<subreportParameterExpression><![CDATA[$P{consulta_id}]]></subreportParameterExpression>
-				</subreportParameter>
-				<subreportParameter name="nombre_subreporte">
-					<subreportParameterExpression><![CDATA[$P{nombre_subreporte}]]></subreportParameterExpression>
+				<reportElement x="0" y="20" width="555" height="200" uuid="554f8a2f-9384-40ff-91e3-90711d8ee4a9"/>
+				<subreportParameter name="consultaid">
+					<subreportParameterExpression><![CDATA[$P{consultaid}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA["Tratamiento.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA["tratamiento.jasper"]]></subreportExpression>
 			</subreport>
 		</band>
 	</detail>
