--- a/SigebiWeb/src/main/resources/reportes/servicios_salud.jrxml
+++ b/SigebiWeb/src/main/resources/reportes/servicios_salud.jrxml
@@ -11,7 +11,7 @@
 	<property name="com.jaspersoft.studio.unit.rightMargin" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnWidth" value="pixel"/>
 	<property name="com.jaspersoft.studio.unit.columnSpacing" value="pixel"/>
-	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="SIGEBI"/>
+	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="Sample DB"/>
 	<parameter name="mes" class="java.lang.Integer"/>
 	<parameter name="anho" class="java.lang.Integer"/>
 	<parameter name="mesLetra" class="java.lang.String"/>
@@ -46,18 +46,24 @@
 	<group name="Group1">
 		<groupExpression><![CDATA[$F{nombreestamento}]]></groupExpression>
 		<groupHeader>
-			<band height="48">
+			<band height="52">
 				<textField textAdjust="StretchHeight">
-					<reportElement x="0" y="1" width="180" height="16" uuid="bc0bbbf0-fdfb-4438-b0bc-4d4f65ec2829">
+					<reportElement x="0" y="0" width="195" height="30" uuid="bc0bbbf0-fdfb-4438-b0bc-4d4f65ec2829">
 						<property name="com.jaspersoft.studio.spreadsheet.connectionID" value="349cc68e-1dba-4ed0-9932-70151b1e6b06"/>
 					</reportElement>
-					<textElement markup="styled">
+					<box>
+						<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+						<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					</box>
+					<textElement textAlignment="Center" verticalAlignment="Middle" markup="styled">
 						<font isBold="true"/>
 					</textElement>
 					<textFieldExpression><![CDATA[$F{nombreestamento}]]></textFieldExpression>
 				</textField>
 				<subreport>
-					<reportElement x="-20" y="26" width="553" height="22" uuid="040efd93-e7f0-4380-b566-e0caa7c721e2"/>
+					<reportElement x="0" y="30" width="555" height="22" uuid="040efd93-e7f0-4380-b566-e0caa7c721e2"/>
 					<subreportParameter name="itemsJRBean">
 						<subreportParameterExpression><![CDATA[$P{itemsJRBean}]]></subreportParameterExpression>
 					</subreportParameter>
@@ -77,28 +83,28 @@
 		<band height="79">
 			<staticText>
 				<reportElement x="126" y="0" width="294" height="20" uuid="d1d361d0-4a56-480a-b548-fad27c3c4415"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Universidad Nacional de Asunción ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="20" width="154" height="20" uuid="015d83e5-cba9-45ed-90d7-5cfd52e89919"/>
-				<textElement>
+				<reportElement x="196" y="20" width="154" height="20" uuid="015d83e5-cba9-45ed-90d7-5cfd52e89919"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Facultad Politécnica]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="126" y="40" width="304" height="20" uuid="0ff30b97-706c-45df-8c64-170658dfd0f9"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Bienestar Institucional]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="60" width="134" height="19" uuid="d95b5f2b-862c-4319-85b3-1d6d615c66b5"/>
-				<textElement>
+				<reportElement x="205" y="60" width="134" height="19" uuid="d95b5f2b-862c-4319-85b3-1d6d615c66b5"/>
+				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[División SALUD]]></text>
@@ -109,14 +115,14 @@
 		<band height="50">
 			<staticText>
 				<reportElement x="128" y="0" width="300" height="20" uuid="4d8b2e2e-be47-4d97-b007-97980b6378b8"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="16" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INFORME DE SERVICIO DE SALUD]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="198" y="21" width="50" height="19" uuid="4b07da84-19f2-4bf5-9c6b-a090f2bb0cb3"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Mes]]></text>
@@ -132,66 +138,67 @@
 	</pageHeader>
 	<columnHeader>
 		<band height="104">
-			<rectangle>
-				<reportElement x="0" y="54" width="195" height="50" uuid="77d072d5-5bd7-4ce4-9d08-f6a14f5d3ce3">
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-			</rectangle>
-			<rectangle>
-				<reportElement x="195" y="54" width="153" height="50" uuid="47f1c29a-0a96-4e53-875c-d1a90405513c"/>
-			</rectangle>
-			<rectangle>
-				<reportElement x="348" y="54" width="73" height="50" uuid="ed5a3c92-78c7-4b47-8d7e-c04ea4694eab"/>
-			</rectangle>
-			<rectangle>
-				<reportElement x="420" y="54" width="71" height="50" uuid="8a081f33-4a75-4beb-9dd0-7009be6754cc">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-			</rectangle>
-			<rectangle>
-				<reportElement x="491" y="54" width="63" height="50" uuid="fef917ba-b77c-482e-8dcf-0a611152dc94">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-				</reportElement>
-			</rectangle>
 			<staticText>
 				<reportElement x="0" y="0" width="250" height="20" uuid="803a5dd2-5dcb-4c77-97a5-3351003edc35"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[RESULTADOS CUANTITATIVOS]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="20" width="545" height="30" uuid="b0f67344-ba04-4c08-b146-68eb66cca842"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[(Número de atenciones) Atención Médica.]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="491" y="54" width="62" height="50" uuid="26fb0e08-8dd0-4e23-9375-ca361e5be547"/>
+				<reportElement x="492" y="54" width="63" height="50" uuid="26fb0e08-8dd0-4e23-9375-ca361e5be547"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="421" y="54" width="68" height="50" uuid="58211269-40b6-4bde-bf65-d2de7fac898c"/>
+				<reportElement x="420" y="54" width="72" height="50" uuid="58211269-40b6-4bde-bf65-d2de7fac898c"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Masculino]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="349" y="54" width="70" height="50" uuid="5fbd0525-d771-43c4-b7b6-4a5f72e74d65"/>
+				<reportElement x="350" y="54" width="70" height="50" uuid="5fbd0525-d771-43c4-b7b6-4a5f72e74d65"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Femenino]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="195" y="54" width="154" height="50" uuid="d89f3c72-2b11-48ee-801a-3dc770ae9306"/>
+				<reportElement x="195" y="54" width="155" height="50" uuid="d89f3c72-2b11-48ee-801a-3dc770ae9306"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -200,6 +207,12 @@ Facultades]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="0" y="54" width="195" height="50" uuid="aa63d3af-740d-4352-9cb0-5e9f19b1765a"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
@@ -207,64 +220,77 @@ Facultades]]></text>
 			</staticText>
 		</band>
 	</columnHeader>
-	<summary>
+	<lastPageFooter>
 		<band height="25">
 			<staticText>
-				<reportElement x="1" y="0" width="190" height="25" uuid="13081d5b-dac4-4306-8e42-1bcbb37c3d8a">
+				<reportElement x="0" y="0" width="194" height="25" uuid="13081d5b-dac4-4306-8e42-1bcbb37c3d8a">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="384" y="0" width="50" height="25" uuid="2b2faebf-dda3-427f-ac10-43f8ed6c9463">
+				<reportElement x="350" y="0" width="70" height="25" uuid="2b2faebf-dda3-427f-ac10-43f8ed6c9463">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{totalFemenino}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="443" y="0" width="50" height="25" uuid="89892c4c-c9cf-4c01-9b53-e215b5609101">
+				<reportElement x="420" y="0" width="74" height="25" uuid="89892c4c-c9cf-4c01-9b53-e215b5609101">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{totalMasculino}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="504" y="0" width="50" height="25" uuid="3f2f058e-14bc-4354-9486-168d4d7ce6ff">
+				<reportElement x="494" y="0" width="60" height="25" uuid="3f2f058e-14bc-4354-9486-168d4d7ce6ff">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
 				<textElement>
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{totalSuma}]]></textFieldExpression>
 			</textField>
-			<staticText>
-				<reportElement x="1" y="0" width="552" height="25" uuid="673ec3fd-616b-4dd5-9037-df6a4ddfb3b3">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<text><![CDATA[]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="1" y="0" width="194" height="25" uuid="9fb28388-5642-43eb-88d0-34c37800fc67">
+			<textField>
+				<reportElement x="194" y="0" width="156" height="25" uuid="c20eaeb5-665f-4557-afa1-95398093735c">
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -274,39 +300,7 @@ Facultades]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<text><![CDATA[]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="349" y="0" width="94" height="25" uuid="473c033d-862c-4e56-99a1-bf2fc94f27c4">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<text><![CDATA[]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="443" y="0" width="50" height="25" uuid="3ce8270a-ceb0-4f83-a1ab-305c6f518e0d">
-					<property name="com.jaspersoft.studio.unit.y" value="px"/>
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<box>
-					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
-				</box>
-				<text><![CDATA[]]></text>
-			</staticText>
-			<staticText>
-				<reportElement x="495" y="0" width="58" height="25" uuid="8e5fed6d-2bd6-4b1f-895d-45fdd514eda5">
-					<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				</reportElement>
-				<text><![CDATA[]]></text>
-			</staticText>
+			</textField>
 		</band>
-	</summary>
+	</lastPageFooter>
 </jasperReport>
