--- a/SigebiWeb/src/main/resources/reportes/reporte_atenciones.jrxml
+++ b/SigebiWeb/src/main/resources/reportes/reporte_atenciones.jrxml
@@ -33,33 +33,36 @@ where EXTRACT(MONTH FROM fecha)=$P{mes} and EXTRACT(YEAR FROM fecha)=$P{anho}]]>
 	<title>
 		<band height="79" splitType="Stretch">
 			<image>
-				<reportElement x="0" y="0" width="126" height="79" uuid="cc87c3a2-8313-4371-a366-08acc603f3ab"/>
+				<reportElement x="30" y="0" width="90" height="79" uuid="cc87c3a2-8313-4371-a366-08acc603f3ab">
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
 				<imageExpression><![CDATA[$P{reportLogo}+"logofpuna.png"]]></imageExpression>
 			</image>
 			<staticText>
 				<reportElement x="126" y="0" width="294" height="20" uuid="a018db42-d32c-41ea-8c8f-90f952b89781"/>
-				<textElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Universidad Nacional de Asunción ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="20" width="154" height="20" uuid="d0849b8d-f6f7-4670-908f-4b38d8003422"/>
-				<textElement>
+				<reportElement x="126" y="20" width="294" height="20" uuid="d0849b8d-f6f7-4670-908f-4b38d8003422"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Facultad Politécnica]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="40" width="304" height="20" uuid="2036e315-3167-456a-926b-d3350f7f6e5e"/>
-				<textElement>
+				<reportElement x="126" y="40" width="294" height="20" uuid="2036e315-3167-456a-926b-d3350f7f6e5e"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Bienestar Institucional]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="60" width="134" height="19" uuid="6f584f0c-a2c2-4595-9795-e683a7b05c91"/>
-				<textElement>
+				<reportElement x="126" y="60" width="294" height="19" uuid="6f584f0c-a2c2-4595-9795-e683a7b05c91"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[División SALUD]]></text>
@@ -81,10 +84,7 @@ En resumen:  Atenciones]]></text>
 		</band>
 	</pageHeader>
 	<columnHeader>
-		<band height="136" splitType="Stretch">
-			<rectangle>
-				<reportElement x="20" y="103" width="530" height="33" uuid="015c9904-7738-4347-be52-d632d8bdd8ba"/>
-			</rectangle>
+		<band height="152" splitType="Stretch">
 			<staticText>
 				<reportElement x="200" y="0" width="160" height="20" uuid="f1cbe7a1-b5de-4581-88f4-543643ba00b7"/>
 				<box>
@@ -93,7 +93,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Servicio Salud]]></text>
@@ -106,7 +106,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Atenciones en consultorio]]></text>
@@ -119,7 +119,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Atención Médica]]></text>
@@ -132,7 +132,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Atención de Enfermería]]></text>
@@ -145,7 +145,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Electrocardiograma]]></text>
@@ -158,7 +158,7 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{sumatotal}]]></textFieldExpression>
@@ -171,57 +171,105 @@ En resumen:  Atenciones]]></text>
 					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
 				</box>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[TOTAL]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="20" y="103" width="100" height="30" uuid="6e6ea552-8d83-43cd-9de1-89e649aa4667"/>
-				<textElement verticalAlignment="Bottom">
+				<reportElement x="3" y="123" width="110" height="28" uuid="6e6ea552-8d83-43cd-9de1-89e649aa4667"/>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Beneficiarios]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="270" y="103" width="100" height="27" uuid="28fe2d47-1e92-4141-851a-93c53711d01f"/>
-				<textElement verticalAlignment="Bottom">
+				<reportElement x="248" y="123" width="100" height="29" uuid="28fe2d47-1e92-4141-851a-93c53711d01f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Femenino]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="380" y="103" width="100" height="27" uuid="0c82ee4b-192a-4713-869e-81075c6295af"/>
-				<textElement verticalAlignment="Bottom">
+				<reportElement x="353" y="123" width="100" height="29" uuid="0c82ee4b-192a-4713-869e-81075c6295af"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Masculino]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="480" y="103" width="70" height="27" uuid="f3ea48bd-fb8a-4aeb-ba8e-13bf46591b7a"/>
-				<textElement verticalAlignment="Bottom">
+				<reportElement x="466" y="123" width="74" height="28" uuid="f3ea48bd-fb8a-4aeb-ba8e-13bf46591b7a"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[TOTAL]]></text>
 			</staticText>
+			<staticText>
+				<reportElement x="0" y="122" width="554" height="30" uuid="d4ee2878-6d20-44a8-9ab1-cb30d1a9ffd8"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="122" width="231" height="30" uuid="9c4d7aac-dc65-427a-b4a3-abef1083f642">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="231" y="122" width="118" height="30" uuid="f2333699-c011-4150-8e99-11bc43d8cc5c">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="349" y="122" width="101" height="30" uuid="db98cb70-3c3d-4557-9db4-21f73500dcf9">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.y" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<detail>
-		<band height="274" splitType="Stretch">
-			<frame>
-				<reportElement x="0" y="0" width="200" height="200" uuid="b979fbe9-9341-4b21-a4e5-c6cc1aadbb65"/>
-				<subreport>
-					<reportElement x="0" y="0" width="200" height="200" uuid="53aac9bb-bb96-47ec-9693-b23046f60a67"/>
-					<subreportParameter name="mes">
-						<subreportParameterExpression><![CDATA[$P{mes}]]></subreportParameterExpression>
-					</subreportParameter>
-					<subreportParameter name="anho">
-						<subreportParameterExpression><![CDATA[$P{anho}]]></subreportParameterExpression>
-					</subreportParameter>
-					<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-					<subreportExpression><![CDATA[$P{subReporteDir}+"beneficiarios.jasper"]]></subreportExpression>
-				</subreport>
-			</frame>
+		<band height="40" splitType="Stretch">
+			<subreport>
+				<reportElement x="0" y="0" width="554" height="40" uuid="53aac9bb-bb96-47ec-9693-b23046f60a67">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+				</reportElement>
+				<subreportParameter name="mes">
+					<subreportParameterExpression><![CDATA[$P{mes}]]></subreportParameterExpression>
+				</subreportParameter>
+				<subreportParameter name="anho">
+					<subreportParameterExpression><![CDATA[$P{anho}]]></subreportParameterExpression>
+				</subreportParameter>
+				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
+				<subreportExpression><![CDATA[$P{subReporteDir}+"beneficiarios.jasper"]]></subreportExpression>
+			</subreport>
 		</band>
 	</detail>
 </jasperReport>
