--- a/SigebiWeb/src/main/resources/reportes/reporte_totales.jrxml
+++ b/SigebiWeb/src/main/resources/reportes/reporte_totales.jrxml
@@ -6,6 +6,7 @@
 	<parameter name="mes" class="java.lang.Integer"/>
 	<parameter name="anho" class="java.lang.Integer"/>
 	<parameter name="subReporteDir" class="java.lang.String"/>
+	<parameter name="reportLogo" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[select * from sumatotal_carrera($P{mes},$P{anho})]]>
 	</queryString>
@@ -30,44 +31,43 @@
 	<title>
 		<band height="95" splitType="Stretch">
 			<staticText>
-				<reportElement x="126" y="0" width="294" height="20" uuid="4eca769c-a9b5-4545-9406-e408addcb9f9"/>
-				<textElement>
+				<reportElement x="126" y="0" width="304" height="20" uuid="4eca769c-a9b5-4545-9406-e408addcb9f9"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Universidad Nacional de Asunción ]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="20" width="154" height="20" uuid="998a7829-6d0a-40f1-8902-59f9ce659828"/>
-				<textElement>
+				<reportElement x="203" y="20" width="166" height="20" uuid="998a7829-6d0a-40f1-8902-59f9ce659828"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Facultad Politécnica]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="126" y="40" width="304" height="20" uuid="c1391759-626f-4066-80e8-b0d04e7cc08c"/>
-				<textElement>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dirección de Bienestar Institucional]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="60" width="134" height="19" uuid="9cdcc26f-49a8-4050-af22-d602167f8d7f"/>
-				<textElement>
+				<reportElement x="206" y="60" width="134" height="19" uuid="9cdcc26f-49a8-4050-af22-d602167f8d7f"/>
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[División SALUD]]></text>
 			</staticText>
+			<image>
+				<reportElement x="30" y="0" width="96" height="79" uuid="cf1ce85b-7532-4bd0-b73f-0199c990fd04"/>
+				<imageExpression><![CDATA[$P{reportLogo}+"logofpuna.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<columnHeader>
 		<band height="115" splitType="Stretch">
-			<rectangle>
-				<reportElement x="0" y="0" width="550" height="72" uuid="1dc38e5f-b632-4455-ac92-1c5c79628f8d">
-					<property name="com.jaspersoft.studio.unit.x" value="px"/>
-				</reportElement>
-			</rectangle>
 			<staticText>
-				<reportElement x="0" y="1" width="150" height="39" uuid="6a7fe406-c0d2-4464-9727-44b7043f84cb">
+				<reportElement x="0" y="1" width="141" height="39" uuid="6a7fe406-c0d2-4464-9727-44b7043f84cb">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
@@ -76,14 +76,18 @@
 				<text><![CDATA[ESTUDIANTES de Grado FP-UNA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="0" width="200" height="30" uuid="709585c3-fca3-4087-8bbc-5732925d68ac"/>
+				<reportElement x="180" y="0" width="200" height="39" uuid="709585c3-fca3-4087-8bbc-5732925d68ac">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[FUNCIONARIOS FP-UNA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="380" y="0" width="164" height="30" uuid="46ca69e6-bb4c-43aa-b283-5cf3ada84652"/>
+				<reportElement x="380" y="0" width="164" height="39" uuid="46ca69e6-bb4c-43aa-b283-5cf3ada84652">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -99,42 +103,49 @@
 				<text><![CDATA[Carreras]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="180" y="41" width="110" height="30" uuid="65a1e7f6-c923-436f-8a81-512f7a207cca"/>
+				<reportElement x="141" y="41" width="178" height="30" uuid="65a1e7f6-c923-436f-8a81-512f7a207cca"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Dependencias]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="380" y="40" width="100" height="32" uuid="2d5d5ad8-f17a-4004-94fe-dd9bd09e77eb"/>
+				<reportElement x="380" y="40" width="120" height="30" uuid="2d5d5ad8-f17a-4004-94fe-dd9bd09e77eb">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Departamentos de Enseñanza]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="90" y="41" width="51" height="30" uuid="2a4efceb-d64f-4d89-977d-d27ee51d1d02"/>
+				<reportElement x="80" y="41" width="61" height="30" uuid="2a4efceb-d64f-4d89-977d-d27ee51d1d02"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="310" y="41" width="70" height="30" uuid="e1542c25-c9bf-4009-a023-e35f193a8a7a"/>
+				<reportElement x="321" y="41" width="59" height="30" uuid="e1542c25-c9bf-4009-a023-e35f193a8a7a">
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
+					<property name="com.jaspersoft.studio.unit.x" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="491" y="41" width="56" height="31" uuid="1ea229a3-3ff6-4f9a-8678-613fad5db50d"/>
+				<reportElement x="500" y="39" width="50" height="32" uuid="1ea229a3-3ff6-4f9a-8678-613fad5db50d">
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[Total]]></text>
 			</staticText>
 			<subreport>
-				<reportElement isPrintRepeatedValues="false" x="0" y="72" width="141" height="40" uuid="83740cd4-1da5-4c9d-bba8-6c4813e98323">
+				<reportElement isPrintRepeatedValues="false" x="0" y="71" width="141" height="41" uuid="83740cd4-1da5-4c9d-bba8-6c4813e98323">
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 				</reportElement>
 				<subreportParameter name="anho">
@@ -147,7 +158,7 @@
 				<subreportExpression><![CDATA[$P{subReporteDir}+"reporte_totalcarreras.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement isPrintRepeatedValues="false" x="141" y="72" width="239" height="40" uuid="c07f431a-df62-48ec-9f06-3c6538296bdc"/>
+				<reportElement isPrintRepeatedValues="false" x="141" y="71" width="239" height="41" uuid="c07f431a-df62-48ec-9f06-3c6538296bdc"/>
 				<subreportParameter name="anho">
 					<subreportParameterExpression><![CDATA[$P{anho}]]></subreportParameterExpression>
 				</subreportParameter>
@@ -158,7 +169,7 @@
 				<subreportExpression><![CDATA[$P{subReporteDir}+"reporte_totalfuncionarios.jasper"]]></subreportExpression>
 			</subreport>
 			<subreport>
-				<reportElement isPrintRepeatedValues="false" x="380" y="72" width="170" height="40" uuid="a95c06e4-b87e-4a30-8ac4-a986cf6c7b02">
+				<reportElement isPrintRepeatedValues="false" x="380" y="71" width="170" height="41" uuid="a95c06e4-b87e-4a30-8ac4-a986cf6c7b02">
 					<property name="com.jaspersoft.studio.unit.y" value="px"/>
 				</reportElement>
 				<subreportParameter name="mes">
@@ -170,13 +181,95 @@
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 				<subreportExpression><![CDATA[$P{subReporteDir}+"reporte_totaldocentes.jasper"]]></subreportExpression>
 			</subreport>
+			<staticText>
+				<reportElement x="0" y="0" width="550" height="71" uuid="2ed4b0af-936a-4465-beed-58767f8881a7">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="0" width="141" height="39" uuid="f24a46f4-e3d6-4bfc-b4f4-e31b78f8dea2">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="141" y="0" width="239" height="39" uuid="3673066d-5e1b-490c-853d-c94444333148">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="380" y="0" width="170" height="39" uuid="91f0b5cd-35a1-404e-90ad-d564a459abb6">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+					<property name="com.jaspersoft.studio.unit.height" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="0" y="39" width="80" height="32" uuid="1b607a9e-5fe3-408d-b275-53678fcec1ca"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="141" y="39" width="180" height="32" uuid="e6a9082b-8309-4596-887b-e5f0e77f461c">
+					<property name="com.jaspersoft.studio.unit.y" value="px"/>
+				</reportElement>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="380" y="39" width="120" height="32" uuid="6459260e-d118-4aa3-a8c4-159905d0fba4"/>
+				<box>
+					<topPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<leftPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<bottomPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+					<rightPen lineWidth="1.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<text><![CDATA[]]></text>
+			</staticText>
 		</band>
 	</columnHeader>
 	<columnFooter>
 		<band height="153" splitType="Stretch">
 			<staticText>
 				<reportElement x="0" y="0" width="199" height="20" uuid="8c5510e9-6082-4fd0-83ae-f310f043c9cd"/>
-				<textElement>
+				<textElement verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[RESULTADOS CUALITATIVOS]]></text>
@@ -189,14 +282,14 @@
 			</rectangle>
 			<staticText>
 				<reportElement x="30" y="22" width="100" height="22" uuid="1c009fd5-98e3-418e-a9e3-545254fdcbb2"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[FECHA]]></text>
 			</staticText>
 			<staticText>
 				<reportElement x="260" y="22" width="100" height="22" uuid="92934ea4-b7fb-4ff1-a38f-5e43982aba0b"/>
-				<textElement textAlignment="Center">
+				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[ACTIVIDADES]]></text>
