--- a/SigebiWeb/src/main/resources/reportes/reporte_totalfuncionarios.jrxml
+++ b/SigebiWeb/src/main/resources/reportes/reporte_totalfuncionarios.jrxml
@@ -16,7 +16,7 @@
 		<property name="com.jaspersoft.studio.field.name" value="codcarrera"/>
 		<property name="com.jaspersoft.studio.field.label" value="codcarrera"/>
 	</field>
-	<variable name="total1" class="java.lang.Long" resetType="Column" calculation="Sum">
+	<variable name="total1" class="java.lang.Long" calculation="Sum">
 		<variableExpression><![CDATA[$F{total}]]></variableExpression>
 	</variable>
 	<group name="total">
@@ -68,7 +68,7 @@
 				</textElement>
 				<textFieldExpression><![CDATA[$F{total}]]></textFieldExpression>
 			</textField>
-			<textField textAdjust="StretchHeight" evaluationTime="Group" evaluationGroup="total" isBlankWhenNull="true">
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
 				<reportElement stretchType="RelativeToBandHeight" x="0" y="0" width="180" height="22" isPrintWhenDetailOverflows="true" uuid="2d75df8c-8dd9-4354-9a60-6b06f546f0de">
 					<property name="com.jaspersoft.studio.unit.height" value="px"/>
 				</reportElement>
@@ -102,7 +102,7 @@
 				</box>
 				<text><![CDATA[]]></text>
 			</staticText>
-			<textField isBlankWhenNull="true">
+			<textField evaluationTime="Report" isBlankWhenNull="true">
 				<reportElement x="180" y="0" width="58" height="20" uuid="806fccba-6fdc-4057-9a6f-419c96e9d6b4">
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
